--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,10 @@ upload_protocol = jlink
 debug_tool = jlink
 debug_init_break = tbreak setup
 lib_deps = wollewald/ADS1115_WE@^1.4.3
+;build_flags =
+;    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+;    -D USBCON
+;    -D USBD_VID=0x0483
+;    -D USBD_PID=0x0100
+;    -D USB_MANUFACTURER="CodyTech"
+;    -D USB_PRODUCT="\"CodyTech SDP810 to USB\""
